@@ -63,6 +63,7 @@ Task* Task::factory( const string& t ){
   else if( type == "lyr" ) return new LYR;
   else if( type == "deepzoom" ) return new DeepZoom;
   else if( type == "ctw" ) return new CTW;
+  else if( type == "iiif" ) return new IIIF;
   else return NULL;
 
 }
