@@ -1,6 +1,7 @@
 19/08/2014:
 	- Added aspect ratio flag in View.h for use in CVT.cc. Also cleaned up Main.cc to remove
 	  unnecesary logging and record extra http headers.
+	- Added IIIF protocol version 2.0 support via the IIIF argument.
 
 
 13/08/2014:
